--- a/src/global.css
+++ b/src/global.css
@@ -6,12 +6,21 @@ body {
   background-color: #f5f5f5;
 }
 
+.container > form {
+    all: initial;
+}
+
+.chat {
+    padding: 20px;
+}
+
 .header {
     background-color: #333; /* Background color for the header */
     color: green; /* Text color */
     padding: 20px; /* Add some padding for better spacing */
     font-family: 'Comic Sans MS', cursive, sans-serif; /* Set font family */
     text-align: center; /* Center align the content */
+    padding: 20px;
 }
 
 .header-title {
@@ -27,7 +36,7 @@ body {
 }
 
 .nav-links li {
-    margin-right: 20px; /* Add some space between list items */
+    margin-right: 40px; /* Add some space between list items */
 }
 
 .nav-links a {
